# butterflies-and-hurricanes

./: README.md
nsu/oop++/BitArray/: BitArray.cpp  BitArray.h  CMakeLists.txt  task-1.cpp
nsu/oop++/BitArray/GoogleTest/: BitArray_test.cpp  CMakeLists.txt
nsu/oop++/GameLife/: CMakeLists.txt  main.cpp  universeinfo.txt
nsu/oop++/GameLife/src/: CMakeLists.txt  CommandController.cpp  CommandController.h  CommandHandler.cpp  CommandHandler.h  FileReader.cpp  FileReader.h  Game.cpp  Game.h  GameField.cpp  GameField.h  GameRules.cpp  GameRules.h  GameUniverse.cpp  GameUniverse.h  OutputHandler.cpp  OutputHandler.h  UniReader.cpp  UniReader.h  UniWriter.cpp  UniWriter.h
nsu/oop++/Parser/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Parser.cpp  Parser.h  Statistic.cpp  Statistic.h  in.txt  output.csv  task-0.cpp
nsu/oop++/Parser/GoogleTest/: CMakeLists.txt  FileReader_test.cpp  FileWriter_test.cpp  Parser_test.cpp  Statistic_test.cpp
uus/finals/: CMakeLists.txt  main.cpp  output.txt
uus/finals/src/: CMakeLists.txt  FlightStruct.cpp  FlightsInfo.cpp  FlightsInfo.h  FlightsManager.cpp  FlightsSearcher.cpp  FlightsSearcher.h  FlightsStats.cpp  FlightsStats.h
uus/lab2/: CMakeLists.txt  FlightsInfo.cpp  FlightsInfo.h  input.txt  main.cpp  output.txt
uus/lab3/: CMakeLists.txt  FlightsInfo.cpp  FlightsInfo.h  input.txt  main.cpp  output.txt
uus/lab4/: 13  CMakeLists.txt  FlightStruct.h  FlightsInfo.cpp  FlightsInfo.h  FlightsManage.h  FlightsSearcher.cpp  FlightsSearcher.h  FlightsStats.cpp  FlightsStats.h  StatsUtil.cpp  main.cpp  output.txt
uus/lab5/: input.txt  main.cpp  output.txt
uus/lab5/src/: CMakeLists.txt  FlightStruct.cpp  FlightStruct.h  FlightsInfo.cpp  FlightsInfo.h  FlightsManager.cpp  FlightsManager.h  FlightsSearcher.cpp  FlightsSearcher.h  FlightsStats.cpp  FlightsStats.h  SearchUtil.cpp
uus/laboneflight/: CMakeLists.txt  FlightsInfo.cpp  FlightsInfo.h  input  main.cpp  output
